#cpp-server Unreferenced to

--- a/cpp-serveur/makefile
+++ b/cpp-serveur/makefile
@@ -1,19 +1,19 @@
 CC		    = /usr/bin/g++
 CPPFLAGS      = -g -Wall -ansi -pedantic
 LDFLAGS       = -g
-OMNI_HOME     = /usr/bin/omniidl
+OMNI_HOME     = /mnt/d/omniORB/build/bin/omniidl
 OMNI_INCLUDES = 
-OMNI_LIB_DIR  = /mnt/d/omniORB/lib
+OMNI_LIB_DIR  = -L/mnt/d/omniORB/build/lib/*.so
 OMNIIDL       = $(OMNI_HOME)
 INCLUDES      = $(OMNI_INCLUDES)
 LIBS		  = -lomniORB4 -lomnithread -lomniDynamic4
 OBJECTS       = drawMeASheep.o 
 
 all : clean drawMeASheepSK main
-		$(OMNI_LIB_DIR) $(LIBS)
+		$(OMNI_LIB_DIR) $(LIBS) $(OMNI_LIB_DIR)
 
 drawMeASheepSK.o: drawMeASheep.hh
-		$(CC) -c $(CPPFLAGS) $(INCLUDES) drawMeASheepSK.cc  -o drawMeASheepSK.o
+		$(CC) -c $(CPPFLAGS) drawMeASheepSK.cc  -o drawMeASheepSK.o
 
 manager.o : managerImpl.h
 		$(CC) -c $(CFLAGS) managerImpl.cpp -o managerImpl.o
