--- a/cpp-server/TEST/makefile
+++ b/cpp-server/TEST/makefile
@@ -1,4 +1,4 @@
-CFLAGS = -Wall -std=c++11 #-Werror -Weffc++
+CFLAGS = -Wall -std=c++11 #-Werror -Weffc++ -lpthread
 SRC = ./src
 INC = ./include
 BIN = ./bin
@@ -6,41 +6,41 @@ CORBA = ../Corba
 GEN = ./generated
 LDFLAGS       = -g
 CC		    = g++
-OMNI_HOME     = /usr/bin/omniidl
-OMNI_INCLUDES = -I/mnt/d/omniORB/include -I/mnt/d/omniORB/include/omniORB4
-OMNI_LIB_DIR  = /mnt/d/omniORB/lib
-OMNIIDL       = /usr/lib/omniidl
-INCLUDES      = $(OMNI_INCLUDES)
-LIBS		  = -L$(OMNI_LIB_DIR) -lomniORB4 -lomnithread -lomniDynamic4 -lomniCodeSets4 -lCOS4 -lCOSDynamic4
-OBJECTS       = drawMeASheep.o 
+OMNI_INCLUDES = -I/home/sirpapy/Bureau/omniORB-4.2.1/include/omniORB4/  -I/home/sirpapy/Bureau/omniORB-4.2.1/include
+OMNI_LIB_DIR  = /home/sirpapy/Bureau/omniORB-4.2.1/lib
+OMNIIDL       = /home/sirpapy/Bureau/omniORB-4.2.1/bin/omniidl
+LIBS		  = -L$(OMNI_LIB_DIR) -lomniORB4 -lomnithread -lomniDynamic4
+OBJECTS       = drawMeASheep.o
 
 
 
 
 all : main
 
-main : managerImpl.o TestSK.o
-	$(CC) $(CFLAGS) managerImpl.o TestSK.o -o main $(OMNI_INCLUDES) $(LIBS)
+main : server.o TestSK.o managerImpl.o
+	$(CXX) -o $@ $^ $(LIBS)
 
 # compile le SK.cc généré
 #drawMeASheepSK.o: drawMeASheepSK
 #	$(CC) -c $(CPPFLAGS) $(GEN)/drawMeASheepSK.cc -o $(BIN)/drawMeASheepSK.o
 
-managerImpl.o : managerImpl.h
-	$(CC) -c $(CFLAGS) managerImpl.cpp -o managerImpl.o $(OMNI_INCLUDES) $(LIBS)
+server.o: server.cpp managerImpl.h
+
+managerImpl.h: Test.hh
+
+managerImpl.o : managerImpl.h Test.hh
+#	$(CC) -c $(CFLAGS) managerImpl.cpp -o managerImpl.o $(OMNI_INCLUDES) $(LIBS)
 
 # compile l'idl et met les fichiers générés dans le dossier generated
 
-TestSK.o : Test.hh testgen
-	$(CC) -c  $(CFLAGS) TestSK.cc -o TestSK.o $(OMNI_INCLUDES) $(LIBS)
+TestSK.o : TestSK.cc Test.hh
 
-testgen: Test.idl
-	$(OMNI_HOME) -bcxx Test.idl
+Test.hh TestSK.cc: Test.idl
+	$(OMNIIDL) -bcxx Test.idl
 
 clean: 
 	rm *.o
 	rm main
-	rm $(GEN)/*
 	rm -fr *.o
 	rm -fr core
 	rm -fr *.hh
@@ -50,3 +50,9 @@ clean:
 rebuild:
 	make clean
 	make
+
+.cpp.o:
+	$(CXX) $(CXXFLAGS) -o $@ -c $< $(OMNI_INCLUDES)
+
+.cc.o:
+	$(CXX) $(CXXFLAGS) -o $@ -c $< $(OMNI_INCLUDES)
