--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 cpp-client/bin/*.o
 cpp-server/bin/*.o
-cpp-server/omni_inst/*
+cpp-server/omni_*
 cpp-server/omniORB-4.2.0/*
 cpp-server/InstallOmniORB.txt
 .idea*
