--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ cpp-server/bin/*.o
 cpp-server/omni_*
 cpp-server/omniORB-4.2.0/*
 cpp-server/InstallOmniORB.txt
+cpp-server/cmake-build-debug/*
 .idea*
 cmake*
