#Java-Client using the same idl for all

--- a/cpp-server/makefile
+++ b/cpp-server/makefile
@@ -17,7 +17,7 @@ LIBS          = $(OMNI_INCLUDES) -lomniORB4 -lomnithread -lomniDynamic4
 SRC = ./src
 INC = ./include
 BIN = ./bin
-CORBA = ./Corba
+CORBA = ../Corba
 GEN = ./generated
 #OBJECTS       = drawMeASheepSK.o drawMeASheepDynSK.o drawingManagerImpl.o serveur.o
 OBJECTS       = drawMeASheepSK.o drawingManagerImpl.o serveur.o
