#Java-Client ant file
creating the build xmx
target run will use the following argument : -ORBInitRef
NameService=corbaloc::localhost:4333/NameService

--- a/cpp-server/makefile
+++ b/cpp-server/makefile
@@ -76,7 +76,7 @@ clean:
 	rm -fr core -f
 	rm -fr *.hh -f
 	rm -fr *SK.cc -f
-	rm -fr Server -f
+	rm -fr Server.exe -f
 
 createDir:
 	mkdir $(GEN) -p
